Fixed raw types, deprecated method calls, lint, and removed NameValuePair.